fix weird white space on contact page

--- a/src/pages/Footer/FooterLinks.module.css
+++ b/src/pages/Footer/FooterLinks.module.css
@@ -5,10 +5,10 @@
   padding: 1em 0;
 }
 .contactWrapper {
-  padding: 1em 3em;
+  /* padding: 1em 3em; */
   text-align: center;
-  box-sizing: border-box;
-  margin: 5em 0;
+  /* box-sizing: border-box; */
+  padding: 5em 0;
 }
 .contactWrapper h3 {
   padding: 1em 0;
